Create filter button for mobile Stop search icon in header from being half down in mobile

--- a/src/_styles/06_components/_components.header.scss
+++ b/src/_styles/06_components/_components.header.scss
@@ -75,7 +75,11 @@
 		transition: all 0.3s;
 
 		.headroom--pinned.headroom--not-top &{
-			margin-top: 65px;
+			margin-top: 0;
+
+			@include mq(large){
+				margin-top: 65px;
+			}
 		}
 
 		@include mq(large){
