--- a/src/index.jade
+++ b/src/index.jade
@@ -102,6 +102,8 @@ block content
 												p.article__text #{paragraph.paragraph}
 			div.slick__container--index__arrow__container
 				div.slick__container--index__arrow
+		div.mobile__filter.hide-for-large
+			div.mobile__filter__text Displaying: All posts
 		div.row.show-for-large
 			div.columns.large-12
 				div.filter__container--outer
