--- a/src/_layouts/base.jade
+++ b/src/_layouts/base.jade
@@ -20,7 +20,7 @@ doctype html
 head
 	meta(charset='utf-8')
 	meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
-	title aldconcept2
+	title A Little Dash
 	meta(name='description', content= 'A new Yeogurt application')
 	meta(name='viewport', content='width=device-width, initial-scale=1.0')
 	block stylesheets
@@ -45,6 +45,7 @@ body
 		script(src="https://npmcdn.com/packery@2.1/dist/packery.pkgd.min.js")
 		script(src="https://npmcdn.com/headroom.js@0.9.3/dist/headroom.min.js")
 		script(src="https://npmcdn.com/headroom.js@0.9.3/dist/jQuery.headroom.min.js")
+		script(src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5735754b28f7188e")
 		script(src= baseUrl + 'scripts/main.js')
 		script.
 			$(document).foundation();
