social float progress

--- a/src/_modules/header/header.jade
+++ b/src/_modules/header/header.jade
@@ -14,7 +14,7 @@ mixin header(spec)
 						img.header__logo(src="/images/ALD-logo.png", alt="logo")
 					div.header__right__container
 						div.header__media__container.show-for-large
-							a.addthis_button_facebook
+							a(href="#")
 								img.header__facebook(src="/images/facebook.png", alt="facebook")
 								img.header__facebook-white(src="/images/facebook-white.png", alt="facebook")
 							a(href="#")
