--- a/src/standard.jade
+++ b/src/standard.jade
@@ -20,7 +20,7 @@ block content
 					img.standard__img(src="/images/unnamed-1-1.jpg", alt="Article image")
 					div.standard__img__text FITNESS
 		div.row
-			div.columns.large-8.large-centered
+			div.columns.large-8.large-offset-1
 				div.standard__title__container
 					div.standard__title Why group training pays off better in the long run
 				div.standard__stats
@@ -77,7 +77,12 @@ block content
 								img(src="/images/comment.png")
 								div.author__join__text Join in the discussion
 				a.standard__comments--view(href="#") VIEW COMMENTS <small>(</small>3<small>)</small>
-		div.standard__pattern__container(style="background-image: url('/images/pattern.png');")
+			div.columns.large-3
+				div.standard__social__container--outer.sticky
+					a.standard__social__container--inner.addthis_button_facebook
+						img(src="/images/facebook.png")
+						span Share
+		div.standard__pattern__container.sticky-stop(style="background-image: url('/images/pattern.png');")
 			div.slick__container--standard
 				each val in site.data.articlesslickstandard
 					- var grid = (val.grid === undefined ? '' : val.grid)
