--- a/src/_styles/06_components/_components.standard.scss
+++ b/src/_styles/06_components/_components.standard.scss
@@ -160,7 +160,7 @@
 				display: flex;
 				align-items: center;
 				height: 350px;
-				margin-left: 30px;
+				margin-left: 80px;
 			}
 
 			// {{standard__social__container--inner}}
@@ -172,6 +172,7 @@
 				width: 120px;
 				border: 1px solid #59A0CC;
 				border-radius: 5px;
+				margin-bottom: 10px;
 			}
 		}
 	}
