--- a/src/standard.jade
+++ b/src/standard.jade
@@ -77,7 +77,7 @@ block content
 								img(src="/images/comment.png")
 								div.author__join__text Join in the discussion
 				a.standard__comments--view(href="#") VIEW COMMENTS <small>(</small>3<small>)</small>
-			div.columns.large-3
+			div.columns.large-3.show-for-large
 				div.standard__social__container--outer.sticky
 					a.standard__social__container--inner.addthis_button_facebook
 						img(src="/images/facebook.png")
