social float thing on right with hover effects

--- a/src/_styles/01_settings/_settings.colors.scss
+++ b/src/_styles/01_settings/_settings.colors.scss
@@ -7,6 +7,8 @@ $colors: (
 	'subscribe-btn-hover': #5d5d5d,
 	'subscribe-placeholder': #094260,
 	'subscribe-grey': #EEF3F6,
+	'social': #59A0CC,
+	'social-hover': #eaf7ff,
 	'footer-light': #E2E2E2,
 	'footer-dark': #333333,
 	'footer-dark--text': #cccccc,
