--- a/src/standard.jade
+++ b/src/standard.jade
@@ -1,113 +1,120 @@
 extends _layouts/base
 
 block content
-	div.container.container--standard.page--fitness
-		div.row.show-for-large
-			div.columns.large-12
-				div.breadcrumb__container
-					ul.breadcrumb__list
-					li.breadcrumb__list__enclosure 
-						a.breadcrumb__list__enclosure__link(href="#") HOME
-					li.breadcrumb__list__enclosure.breadcrumb__list__enclosure--divider -
-					li.breadcrumb__list__enclosure 
-						a.breadcrumb__list__enclosure__link(href="#") FITNESS
-					li.breadcrumb__list__enclosure.breadcrumb__list__enclosure--divider -
-					li.breadcrumb__list__enclosure 
-						a.breadcrumb__list__enclosure__link(href="#") TRAINING
-		div.row.small-collapse.large-uncollapse
-			div.columns.large-12
-				div.standard__img__container
-					img.standard__img(src="/images/unnamed-1-1.jpg", alt="Article image")
-					div.standard__img__text FITNESS
-		div.row
-			div.columns.large-8.large-offset-1
-				div.standard__title__container
-					div.standard__title Why group training pays off better in the long run
-				div.standard__stats
-					div.standard__read__container
-						img.standard__read__icon(src="/images/fitness-read.png", alt="icon")
-						small.standard__read__text 4 MINS READ
-					div.standard__comments.show-for-large 3 <small>COMMENTS</small>
-				div.standard__content
-					p Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione <a href="#">voluptatem sequi</a> nesciunt.
+	div
+		div.container.container--standard.page--fitness
+			div.row.show-for-large
+				div.columns.large-12
+					div.breadcrumb__container
+						ul.breadcrumb__list
+						li.breadcrumb__list__enclosure 
+							a.breadcrumb__list__enclosure__link(href="#") HOME
+						li.breadcrumb__list__enclosure.breadcrumb__list__enclosure--divider -
+						li.breadcrumb__list__enclosure 
+							a.breadcrumb__list__enclosure__link(href="#") FITNESS
+						li.breadcrumb__list__enclosure.breadcrumb__list__enclosure--divider -
+						li.breadcrumb__list__enclosure 
+							a.breadcrumb__list__enclosure__link(href="#") TRAINING
+			div.row.small-collapse.large-uncollapse
+				div.columns.large-12
+					div.standard__img__container
+						img.standard__img(src="/images/unnamed-1-1.jpg", alt="Article image")
+						div.standard__img__text FITNESS
+			div.row
+				div.columns.large-8.large-offset-1
+					div.standard__title__container
+						div.standard__title Why group training pays off better in the long run
+					div.standard__stats
+						div.standard__read__container
+							img.standard__read__icon(src="/images/fitness-read.png", alt="icon")
+							small.standard__read__text 4 MINS READ
+						div.standard__comments.show-for-large 3 <small>COMMENTS</small>
+					div.standard__content
+						p Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione <a href="#">voluptatem sequi</a> nesciunt.
 
-					p Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis <a href="#">nostrum</a> exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?
+						p Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis <a href="#">nostrum</a> exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?
 
-					p Qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
+						p Qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
 
-					p Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. 
+						p Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. 
 
-					figure
-						img(src="/images/Session-4-Butt-hamstrings-and-obliques-circuit-Eat-Pray-Workout_-1024x768.jpg")
-						figcaption Group trainings in the evening unde omnis vero accusamus et atque deserunt.
+						figure
+							img(src="/images/Session-4-Butt-hamstrings-and-obliques-circuit-Eat-Pray-Workout_-1024x768.jpg")
+							figcaption Group trainings in the evening unde omnis vero accusamus et atque deserunt.
 
-					p A sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+						p A sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
 
-					p Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+						p Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
 
-					p Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-				div.tag__container
-					ul.tag__list
-						li.tag__list__enclosure 
-							a(href="#") #lifestyle
-						li.tag__list__enclosure 
-							a(href="#") #training
-						li.tag__list__enclosure 
-							a(href="#") #fitness
-						li.tag__list__enclosure 
-							a(href="#") #exercise
-						li.tag__list__enclosure 
-							a(href="#") #gettingfit
-				div.author__container
-					div.author__img__container(style="background-image:url('/images/103143490_8.jpg');")
-					div.author__info
-						div.author__name OSHAY KEY
-						div.author__text Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. <a href="#">Nulla consequat massa quis enim</a>.
-						a.author__social__link(href="#").show-for-large
-							img(src="/images/facebook-author.png")
-						a.author__social__link(href="#").show-for-large
-							img(src="/images/twitter-author.png")
-						a.author__social__link(href="#").hide-for-large
-							img(src="/images/facebook-author-m.png")
-						a.author__social__link(href="#").hide-for-large
-							img(src="/images/twitter-author-m.png")
-					div.author__join__container--outer
-						div.author__join__container--center
-							a.author__join__container--inner(href="#")
-								img(src="/images/comment.png")
-								div.author__join__text Join in the discussion
-				a.standard__comments--view(href="#") VIEW COMMENTS <small>(</small>3<small>)</small>
-			div.columns.large-3.show-for-large
-				div.standard__social__container--outer.sticky
-					a.standard__social__container--inner.addthis_button_facebook
-						img(src="/images/facebook.png")
-						span Share
-		div.standard__pattern__container.sticky-stop(style="background-image: url('/images/pattern.png');")
-			div.slick__container--standard
-				each val in site.data.articlesslickstandard
-					- var grid = (val.grid === undefined ? '' : val.grid)
-					div.slick__container--standard__frame
-						div.grid-item--slick-standard(class="#{grid} #{val.type} #{val.category}")
-							a.article__link(href="#")
-								div.article__img(style="background-image:url('#{val.background}')")
-									div.article__tag__container--outer
-										div.article__tag__container--inner
-											img.article__icon(src="/images/#{val.icon}")
-											div.article__tag #{val.tag}
-								div.article__text__container--outer
-									div.article__text__container--inner
-										h2.article__title #{val.title}
-										if val.author
-											div.article__author__container
-												if val.author[0].image
-													div.article__author__img(style="background-image:url('/images/#{val.author[0].image}')")
-													div.article__author__name #{val.author[0].name}
-												else
-													div.article__author__name WITH #{val.author[0].name}
-										if val.text
-											each paragraph in val.text
-												p.article__text #{paragraph.paragraph}
-			+subscribe()
+						p Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+					div.tag__container
+						ul.tag__list
+							li.tag__list__enclosure 
+								a(href="#") #lifestyle
+							li.tag__list__enclosure 
+								a(href="#") #training
+							li.tag__list__enclosure 
+								a(href="#") #fitness
+							li.tag__list__enclosure 
+								a(href="#") #exercise
+							li.tag__list__enclosure 
+								a(href="#") #gettingfit
+					div.author__container
+						div.author__img__container(style="background-image:url('/images/103143490_8.jpg');")
+						div.author__info
+							div.author__name OSHAY KEY
+							div.author__text Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. <a href="#">Nulla consequat massa quis enim</a>.
+							a.author__social__link(href="#").show-for-large
+								img(src="/images/facebook-author.png")
+							a.author__social__link(href="#").show-for-large
+								img(src="/images/twitter-author.png")
+							a.author__social__link(href="#").hide-for-large
+								img(src="/images/facebook-author-m.png")
+							a.author__social__link(href="#").hide-for-large
+								img(src="/images/twitter-author-m.png")
+						div.author__join__container--outer
+							div.author__join__container--center
+								a.author__join__container--inner(href="#")
+									img(src="/images/comment.png")
+									div.author__join__text Join in the discussion
+					a.standard__comments--view(href="#") VIEW COMMENTS <small>(</small>3<small>)</small>
+				div.columns.large-3.show-for-large
+					div.standard__social__container--outer.sticky
+						div.standard__social__container--center
+							a.standard__social__container--inner.addthis_button_facebook
+								img.standard__social__icon(src="/images/facebook-share.png")
+								img.standard__social__icon-white(src="/images/facebook-share-w.png")
+								span Share
+							a.standard__social__container--inner.addthis_button_twitter
+								img.standard__social__icon(src="/images/twitter-share.png")
+								img.standard__social__icon-white(src="/images/twitter-share-w.png")
+								span Tweet
+			div.standard__pattern__container.sticky-stop(style="background-image: url('/images/pattern.png');")
+				div.slick__container--standard
+					each val in site.data.articlesslickstandard
+						- var grid = (val.grid === undefined ? '' : val.grid)
+						div.slick__container--standard__frame
+							div.grid-item--slick-standard(class="#{grid} #{val.type} #{val.category}")
+								a.article__link(href="#")
+									div.article__img(style="background-image:url('#{val.background}')")
+										div.article__tag__container--outer
+											div.article__tag__container--inner
+												img.article__icon(src="/images/#{val.icon}")
+												div.article__tag #{val.tag}
+									div.article__text__container--outer
+										div.article__text__container--inner
+											h2.article__title #{val.title}
+											if val.author
+												div.article__author__container
+													if val.author[0].image
+														div.article__author__img(style="background-image:url('/images/#{val.author[0].image}')")
+														div.article__author__name #{val.author[0].name}
+													else
+														div.article__author__name WITH #{val.author[0].name}
+											if val.text
+												each paragraph in val.text
+													p.article__text #{paragraph.paragraph}
+				+subscribe()
 
 
-	
+		
