--- a/src/_styles/06_components/_components.container.scss
+++ b/src/_styles/06_components/_components.container.scss
@@ -1,10 +1,11 @@
 .container{
 
+	// {{container--standard}}
 	&--standard{
-		margin-top: 101px;
+		padding-top: 101px;
 
 		@include mq(large){
-			margin-top: 200px;
+			padding-top: 200px;
 		}
 	}
 }
