--- a/src/_styles/06_components/_components.mobile.scss
+++ b/src/_styles/06_components/_components.mobile.scss
@@ -198,9 +198,9 @@
 
 		// {{mobile__search__submit}}
 		&__submit{
-			@include m-color('mobile-menu');
+			@include m-color('white');
 			background-color: transparent;
-			background-image: url('/images/search.png');
+			background-image: url('/images/search-active-61x60.png');
 			background-repeat: no-repeat;
 			background-position: center;
 			outline: none;
