Center image and make the standard content image full size at 640 or around there

--- a/src/_styles/06_components/_components.standard.scss
+++ b/src/_styles/06_components/_components.standard.scss
@@ -7,8 +7,10 @@
 		// {{standard__img__container}}
 		&__container{
 			position: relative;
-			max-height: 480px;
 			overflow: hidden;
+			display: flex;
+			align-items: center;
+			max-height: 480px;
 		}
 
 		// {{standard__img__text}}
@@ -41,7 +43,7 @@
 			float: left;
 			margin: 15px 0;
 
-			@include mq(large){
+			@include mq(medium){
 				max-width: 50%;
 				margin: 0 20px 0 0;
 			}
