PROGRESS FOR MAKING STANDARD PAGE CAROUSEL MOBILE VIEW LIKE DESKTOP

--- a/src/_styles/06_components/_components.article.scss
+++ b/src/_styles/06_components/_components.article.scss
@@ -378,6 +378,14 @@
 				margin-bottom: 8px;
 			}
 		}
+
+		.slick__container--standard__frame &{
+			font-size: 24px;
+
+			@include mq(large){
+				font-size: 34px;
+			}
+		}
 	}
 
 	//{{article__author}}
