--- a/src/standard.jade
+++ b/src/standard.jade
@@ -113,7 +113,7 @@ block content
 														div.article__author__name WITH #{val.author[0].name}
 											if val.text
 												each paragraph in val.text
-													p.article__text #{paragraph.paragraph}
+													p.article__text.show-for-large #{paragraph.paragraph}
 				+subscribe()
 
 
