--- a/src/_styles/06_components/_components.slick.scss
+++ b/src/_styles/06_components/_components.slick.scss
@@ -153,7 +153,7 @@
     &--standard{
         // width: 100%;
         padding: 35px 0;
-        overflow: hidden;
+        overflow: visible;
 
         // {{slick__container--standard__frame}}
         &__frame{
@@ -177,6 +177,41 @@
             //@include m-color('white');
             //padding: 40px 0;
             //text-align: center;
+            opacity: 0.5;
+            transition: all 0.3s;
+            -webkit-transition: all 0.3s;
+        }
+
+        .slick-active, .slick-active + .slick-slide, .slick-active + .slick-slide + .slick-slide{
+            opacity: 1;
+        }
+
+        .slick-list{
+            overflow: visible;
+        }
+
+        .slick-prev{
+            z-index: 1;
+
+            // Fix for Firefox not being able to click 
+            height: 80px;
+            width: 76px;
+
+            &:before{
+                content: url('/images/hero-arrow-left.png');
+            }
+        }
+
+        .slick-next{
+            z-index: 1;
+
+            // Fix for Firefox not being able to click 
+            height: 80px;
+            width: 76px;
+
+            &:before{
+                content: url('/images/hero-arrow.png');
+            }
         }
     }
 }
