--- a/src/standard.jade
+++ b/src/standard.jade
@@ -90,31 +90,33 @@ block content
 								img.standard__social__icon-white(src="/images/twitter-share-w.png")
 								span Tweet
 			div.standard__pattern__container.sticky-stop(style="background-image: url('/images/pattern.png');")
-				div.slick__container--standard
-					each val in site.data.articlesslickstandard
-						- var grid = (val.grid === undefined ? '' : val.grid)
-						div.slick__container--standard__frame
-							div.grid-item--slick-standard(class="#{grid} #{val.type} #{val.category}")
-								a.article__link(href="#")
-									div.article__img(style="background-image:url('#{val.background}')")
-										div.article__tag__container--outer
-											div.article__tag__container--inner
-												img.article__icon(src="/images/#{val.icon}")
-												div.article__tag #{val.tag}
-									div.article__text__container--outer
-										div.article__text__container--inner
-											h2.article__title #{val.title}
-											if val.author
-												div.article__author__container
-													if val.author[0].image
-														div.article__author__img(style="background-image:url('/images/#{val.author[0].image}')")
-														div.article__author__name #{val.author[0].name}
-													else
-														div.article__author__name WITH #{val.author[0].name}
-											if val.text
-												each paragraph in val.text
-													p.article__text.show-for-large #{paragraph.paragraph}
+				div.row
+					div.columns.large-12
+						div.slick__container--standard
+							each val in site.data.articlesslickstandard
+								- var grid = (val.grid === undefined ? '' : val.grid)
+								div.slick__container--standard__frame
+									div.grid-item--slick-standard(class="#{grid} #{val.type} #{val.category}")
+										a.article__link(href="#")
+											div.article__img(style="background-image:url('#{val.background}')")
+												div.article__tag__container--outer
+													div.article__tag__container--inner
+														img.article__icon(src="/images/#{val.icon}")
+														div.article__tag #{val.tag}
+											div.article__text__container--outer
+												div.article__text__container--inner
+													h2.article__title #{val.title}
+													if val.author
+														div.article__author__container
+															if val.author[0].image
+																div.article__author__img(style="background-image:url('/images/#{val.author[0].image}')")
+																div.article__author__name #{val.author[0].name}
+															else
+																div.article__author__name WITH #{val.author[0].name}
+													if val.text
+														each paragraph in val.text
+															p.article__text.show-for-large #{paragraph.paragraph}
 				+subscribe()
 
 
-		
+				
