Update icons Increase overlay opacity

--- a/src/_modules/header/header.jade
+++ b/src/_modules/header/header.jade
@@ -23,7 +23,7 @@ mixin header(spec)
 							a.header__subscribe__link
 								img.header__subscribe(src="/images/subscribe.png", alt="subscribe")
 								img.header__subscribe-white(src="/images/subscribe-white.png", alt="subscribe")
-						img.header__search(src="/images/search.png", alt="search")
+						img.header__search(src="/images/search-shadow.png", alt="search")
 	div.mobile__menu
 		div.mobile__menu__close__container
 			img.mobile__menu__close__icon(src='/images/menu-close.png')
