--- a/src/_styles/04_base/_base.scss
+++ b/src/_styles/04_base/_base.scss
@@ -8,7 +8,7 @@
 
 a{
  	@include m-color('link');
- 	&:hover,&:focus{
+ 	&:hover{
  		@include m-color('link');
  		text-decoration: underline;
  	}
