--- a/src/_styles/06_components/_components.standard.scss
+++ b/src/_styles/06_components/_components.standard.scss
@@ -184,7 +184,7 @@
 				border-radius: 5px;
 				margin-bottom: 10px;
 
-				&:hover, &:focus{
+				&:hover{
 					@include m-color('white');
 					@include m-bgcolor('social');
 					text-decoration: none;
@@ -196,6 +196,11 @@
 							display: block;
 						}
 					}
+				}
+
+				&:focus{
+					@include m-color('social');
+					text-decoration: none;
 				}
 			}
 		}
