Standard carousel mobile style

--- a/src/_styles/06_components/_components.grid.scss
+++ b/src/_styles/06_components/_components.grid.scss
@@ -38,7 +38,8 @@
 .grid-item--slick-standard {
 	@include m-bgcolor('article-grey');
 	height: 335px;
-	@include mq(large){
+
+	@include mq(medium){
 		height: 480px;
 	}
 }
