--- a/src/standard.jade
+++ b/src/standard.jade
@@ -115,7 +115,7 @@ block content
 																div.article__author__name WITH #{val.author[0].name}
 													if val.text
 														each paragraph in val.text
-															p.article__text.show-for-large #{paragraph.paragraph}
+															p.article__text.show-for-medium #{paragraph.paragraph}
 				+subscribe()
 
 
