--- a/src/_styles/06_components/_components.article.scss
+++ b/src/_styles/06_components/_components.article.scss
@@ -382,7 +382,7 @@
 		.slick__container--standard__frame &{
 			font-size: 24px;
 
-			@include mq(large){
+			@include mq(medium){
 				font-size: 34px;
 			}
 		}
