--- a/src/_styles/main.scss
+++ b/src/_styles/main.scss
@@ -27,6 +27,7 @@
 @import "06_components/_components.header.scss";
 @import "06_components/_components.mobile.scss";
 @import "06_components/_components.overlay.scss";
+@import "06_components/_components.pillar.scss";
 @import "06_components/_components.slick.scss";
 @import "06_components/_components.standard.scss";
 @import "06_components/_components.subscribe.scss";
