--- a/src/_styles/01_settings/_settings.colors.scss
+++ b/src/_styles/01_settings/_settings.colors.scss
@@ -25,5 +25,6 @@ $colors: (
 	'slick-dot-inactive': #818181,
 	'slick-dot-active': #2C6582,
 	'jointhediscussion': #58A2D1,
-	'mobile-menu': #58A2D1
+	'mobile-menu': #58A2D1,
+	'pillar-display': #808080
 );
