--- a/src/index.jade
+++ b/src/index.jade
@@ -155,7 +155,7 @@ block content
 												p.article__text #{paragraph.paragraph}
 				nav.article__pagination
 					p
-						a(href='page-2.html') Page 2
+						a(href='index-2.html') Page 2
 				div.article__more__container
 					img.article__more(src="/images/load-more.png")
 		+subscribe()
