Add load more for pillar template

--- a/src/index.jade
+++ b/src/index.jade
@@ -157,5 +157,5 @@ block content
 					p
 						a(href='index-2.html') Page 2
 				div.article__more__container
-					img.article__more(src="/images/load-more.png")
+					img.article__more(src="/images/load-more-2.png")
 		+subscribe()
