--- a/src/pillar.jade
+++ b/src/pillar.jade
@@ -13,7 +13,7 @@ block content
 				div.grid
 					div.grid-sizer
 					div.gutter-sizer
-					each val in site.data.articlesfitness
+					each val in site.data.articlespillar
 						- var grid = (val.grid === undefined ? '' : val.grid)
 						div.grid-item(class="#{grid} #{val.type} #{val.category}")
 							a.article__link(href="#")
@@ -37,7 +37,7 @@ block content
 												p.article__text #{paragraph.paragraph}
 				nav.article__pagination
 					p
-						a(href='index-2.html') Page 2
+						a(href='pillar-2.html') Page 2
 				div.article__more__container
-					img.article__more(src="/images/load-more.png")
+					img.article__more(src="/images/load-more-2.png")
 		+subscribe()
