Add bp480 Complete pillar template

--- a/src/pillar.jade
+++ b/src/pillar.jade
@@ -5,7 +5,7 @@ block content
 		div.row
 			div.columns.large-12
 				div.pillar__display__container
-					div.pillar__display Displaying articles:
+					div.pillar__display.show-for-bp480 Displaying articles:
 					img.pillar__img(src="/images/fitness-read.png")
 					div.pillar__category Fitness
 		div.row
