--- a/src/_styles/01_settings/_settings.foundation.scss
+++ b/src/_styles/01_settings/_settings.foundation.scss
@@ -73,12 +73,13 @@ $global-text-direction: ltr;
 
 $breakpoints: (
   small: 0,
+  bp480: 480,
   medium: 640px,
   large: 1024px,
   xlarge: 1160px,
   xxlarge: 1366px,
 );
-$breakpoint-classes: (small medium large xlarge xxlarge);
+$breakpoint-classes: (small bp480 medium large xlarge xxlarge);
 
 // 3. The Grid
 // -----------
