About page progress

--- a/src/_styles/main.scss
+++ b/src/_styles/main.scss
@@ -14,6 +14,7 @@
 @import "02_tools/_tools.mixin.mq.scss";
 @import "02_tools/_tools.mixin.zindex.scss";
 @import "03_generic/_generic.fonts.scss";
+@import "06_components/_components.about.scss";
 @import "06_components/_components.addthis.scss";
 @import "06_components/_components.author.scss";
 @import "06_components/_components.article.scss";
