Contact form progress for desktop

--- a/src/_styles/01_settings/_settings.colors.scss
+++ b/src/_styles/01_settings/_settings.colors.scss
@@ -27,5 +27,7 @@ $colors: (
 	'about-abstract': #2C6582,
 	'jointhediscussion': #58A2D1,
 	'mobile-menu': #58A2D1,
-	'pillar-display': #808080
+	'pillar-display': #808080,
+	'contact-border': #abd1e6,
+	'contact-button': #58a2d1
 );
