--- a/src/_styles/06_components/_components.contact.scss
+++ b/src/_styles/06_components/_components.contact.scss
@@ -17,7 +17,11 @@
 		// {{contact__title__container}}
 		&__container{
 			border-bottom: 1px solid grey;
-			margin-bottom: 50px;
+			margin-bottom: 15px;
+
+			@include mq(large){
+				margin-bottom: 50px;
+			}
 		}
 	}
 
@@ -30,12 +34,17 @@
 	&__abstract{
 		@include font('Breakers-Light');
 		@include m-color('about-abstract');
-		font-size: 28px;
+		font-size: 22px;
+
+		@include mq(large){
+			font-size: 28px;
+		}
 	}
 
 	// {{contact__form}}
 	&__form{
 
+		// {{contact__form__input}}
 		&__input,textarea,textarea:focus{
 			@include font('Breakers-Light');
 			display: block;
@@ -68,7 +77,10 @@
 
 		// {{contact__form__container}}
 		&__container{
-			margin-right: 100px;
+
+			@include mq(large){
+				margin-right: 100px;
+			}
 		}
 	}
 }
