--- a/src/contact.jade
+++ b/src/contact.jade
@@ -22,9 +22,9 @@ block content
 						p Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
 					div.contact__form__container
 						form.contact__form
-							input.contact__form__input(placeholder="Sit voluptatem" type="text")
-							input.contact__form__input(placeholder="Accusantium doloremque" type="text")
-							textarea(placeholder="Quae ab illo inventore")
+							input.contact__form__input(placeholder="Name" type="text")
+							input.contact__form__input(placeholder="Email" type="text")
+							textarea(placeholder="Message")
 							input(type="submit" value="Submit")
 			div.standard__pattern__container.sticky-stop(style="background-image: url('/images/pattern.png');")
 				+subscribe()
