--- a/src/_modules/footer/footer.jade
+++ b/src/_modules/footer/footer.jade
@@ -44,7 +44,7 @@ mixin footer(spec)
 					li.footer__container--light__list__item
 						a.footer__container--light__list__item__link(href="#") Quisque retrum
 			div.columns.large-2.show-for-large
-				div.footer__container--light__title Health
+				div.footer__container--light__title Lifestyle
 				ul.footer__container--light__list
 					li.footer__container--light__list__item
 						a.footer__container--light__list__item__link(href="#") Quisque retrum
