--- a/src/_styles/06_components/_components.pillar.scss
+++ b/src/_styles/06_components/_components.pillar.scss
@@ -17,13 +17,14 @@
 
 	// {{pillar__img}}
 	&__img{
-		margin: 0 10px;
+		margin: 0 0 0 10px;
 	}
 
 	// {{pillar__category}}
 	&__category{
 		@include font('Breakers-Regular');
 		font-size: 24px;
+		margin: 0 0 0 10px;
 
 		.page--fitness &{
 			@include m-color('fitness');
