--- a/src/contact.jade
+++ b/src/contact.jade
@@ -8,7 +8,7 @@ block content
 					div.breadcrumb__container
 						ul.breadcrumb__list
 						li.breadcrumb__list__enclosure 
-							a.breadcrumb__list__enclosure__link(href="#") HOME
+							a.breadcrumb__list__enclosure__link(href="/") HOME
 						li.breadcrumb__list__enclosure.breadcrumb__list__enclosure--divider -
 						li.breadcrumb__list__enclosure 
 							a.breadcrumb__list__enclosure__link(href="#") CONTACT US
