--- a/src/index-4.jade
+++ b/src/index-4.jade
@@ -1,7 +1,7 @@
 each val in site.data.articles
 	- var grid = (val.grid === "undefined" ? '' : val.grid)
 	div.grid-item(class="#{grid} #{val.type} #{val.category}")
-		a.article__link(href="#")
+		a.article__link(href="/standard.html")
 			div.article__img(style="background-image:url('#{val.background}')")
 				div.article__tag__container--outer
 					div.article__tag__container--inner
