--- a/src/index.jade
+++ b/src/index.jade
@@ -9,7 +9,7 @@ block content
 						- var grid = (val.grid === undefined ? '' : val.grid)
 						- var showForLarge = (val.showForLarge === undefined ? '' : val.showForLarge)
 						div.grid-item--slick(class="#{grid} #{showForLarge} #{val.type} #{val.category}")
-							a.article__link(href="#")
+							a.article__link(href="/standard.html")
 								div.article__img(style="background-image:url('#{val.background}')")
 									div.article__tag__container--outer
 										div.article__tag__container--inner
@@ -33,7 +33,7 @@ block content
 						- var grid = (val.grid === undefined ? '' : val.grid)
 						- var showForLarge = (val.showForLarge === undefined ? '' : val.showForLarge)
 						div.grid-item--slick(class="#{grid} #{showForLarge} #{val.type} #{val.category}")
-							a.article__link(href="#")
+							a.article__link(href="/standard.html")
 								div.article__img(style="background-image:url('#{val.background}')")
 									div.article__tag__container--outer
 										div.article__tag__container--inner
@@ -57,7 +57,7 @@ block content
 						- var grid = (val.grid === undefined ? '' : val.grid)
 						- var showForLarge = (val.showForLarge === undefined ? '' : val.showForLarge)
 						div.grid-item--slick(class="#{grid} #{showForLarge} #{val.type} #{val.category}")
-							a.article__link(href="#")
+							a.article__link(href="/standard.html")
 								div.article__img(style="background-image:url('#{val.background}')")
 									div.article__tag__container--outer
 										div.article__tag__container--inner
@@ -81,7 +81,7 @@ block content
 						- var grid = (val.grid === undefined ? '' : val.grid)
 						- var showForLarge = (val.showForLarge === undefined ? '' : val.showForLarge)
 						div.grid-item--slick(class="#{grid} #{showForLarge} #{val.type} #{val.category}")
-							a.article__link(href="#")
+							a.article__link(href="/standard.html")
 								div.article__img(style="background-image:url('#{val.background}')")
 									div.article__tag__container--outer
 										div.article__tag__container--inner
@@ -134,7 +134,7 @@ block content
 					each val in site.data.articles
 						- var grid = (val.grid === undefined ? '' : val.grid)
 						div.grid-item(class="#{grid} #{val.type} #{val.category}")
-							a.article__link(href="#")
+							a.article__link(href="/standard.html")
 								div.article__img(style="background-image:url('#{val.background}')")
 									div.article__tag__container--outer
 										div.article__tag__container--inner
