--- a/src/listing.jade
+++ b/src/listing.jade
@@ -15,7 +15,7 @@ block content
 					each val in site.data.articlespillar
 						- var grid = (val.grid === undefined ? '' : val.grid)
 						div.grid-item(class="#{grid} #{val.type} #{val.category}")
-							a.article__link(href="#")
+							a.article__link(href="/standard.html")
 								div.article__img(style="background-image:url('#{val.background}')")
 									div.article__tag__container--outer
 										div.article__tag__container--inner
