Add link to search

--- a/src/_modules/header/header.jade
+++ b/src/_modules/header/header.jade
@@ -54,7 +54,7 @@ mixin header(spec)
 	div.mobile__search__container--outer
 		div.mobile__search__container--center
 			div.mobile__search__container--inner
-				form.mobile__search__form
+				form.mobile__search__form(action="/listing.html")
 					input.mobile__search__input(placeholder="I am looking for..."  onfocus="this.placeholder = ''" onblur="this.placeholder = 'I am looking for...'")
 					input.mobile__search__submit(type="submit" value=' .')
 	div.mobile__subscribe.mobile__subscribe__container--outer
